@@ -19,11 +19,16 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
   alias(libs.plugins.quarkus)
+    .version(
+      libs.plugins.quarkus.asProvider().map {
+        System.getProperty("quarkus.custom.version", it.version.requiredVersion)
+      }
+    )
   id("nessie-conventions-quarkus")
-  id("nessie-jacoco")
+  id("nessie-license-report")
 }
 
-extra["maven.name"] = "Nessie - Quarkus Server"
+publishingHelper { mavenName = "Nessie - Quarkus Server" }
 
 val quarkusRunner by
   configurations.creating {
@@ -33,122 +38,232 @@ val quarkusRunner by
 val openapiSource by
   configurations.creating { description = "Used to reference OpenAPI spec files" }
 
+val versionIceberg = libs.versions.iceberg.get()
+
+dnsjavaDowngrade()
+
+cassandraDriverTweak()
+
 dependencies {
+  implementation(project(":nessie-client"))
   implementation(project(":nessie-model"))
   implementation(project(":nessie-services"))
+  implementation(project(":nessie-services-config"))
+  implementation(project(":nessie-quarkus-authn"))
+  implementation(project(":nessie-quarkus-authz"))
+  implementation(project(":nessie-quarkus-catalog"))
   implementation(project(":nessie-quarkus-common"))
+  implementation(project(":nessie-quarkus-config"))
+  implementation(project(":nessie-quarkus-distcache"))
+  implementation(project(":nessie-quarkus-secrets"))
+  implementation(project(":nessie-quarkus-rest"))
   implementation(project(":nessie-events-quarkus"))
+  implementation(project(":nessie-rest-common"))
   implementation(project(":nessie-rest-services"))
   implementation(project(":nessie-versioned-spi"))
-  implementation(project(":nessie-versioned-persist-adapter"))
-  implementation(project(":nessie-versioned-persist-store"))
+  implementation(project(":nessie-notice"))
+  implementation(project(":nessie-versioned-storage-jdbc"))
+  implementation(project(":nessie-versioned-storage-jdbc2"))
   implementation(libs.nessie.ui)
 
-  implementation(enforcedPlatform(libs.quarkus.bom))
-  implementation(enforcedPlatform(libs.quarkus.amazon.services.bom))
-  implementation("org.jboss.resteasy:resteasy-core-spi")
-  implementation("io.quarkus:quarkus-resteasy")
-  implementation("io.quarkus:quarkus-resteasy-jackson")
+  // Nessie internal Quarkus extension, currently only disables "non-indexed classes" (Jandex)
+  // warnings.
+  compileOnly(project(":nessie-quarkus-ext-deployment"))
+  implementation(project(":nessie-quarkus-ext"))
+
+  implementation(quarkusPlatform(project))
+  implementation(quarkusExtension(project, "amazon-services"))
+  implementation("io.quarkus:quarkus-rest")
+  implementation("io.quarkus:quarkus-rest-jackson")
   implementation("io.quarkus:quarkus-reactive-routes")
-  implementation("io.quarkus:quarkus-elytron-security-properties-file")
+  implementation("io.quarkus:quarkus-hibernate-validator")
+  implementation("io.quarkus:quarkus-smallrye-context-propagation")
   implementation("io.quarkus:quarkus-smallrye-health")
-  implementation("io.quarkus:quarkus-oidc")
   implementation("io.quarkus:quarkus-smallrye-openapi")
+  implementation("io.quarkus:quarkus-security")
+  implementation("io.quarkus:quarkus-elytron-security-properties-file")
+  implementation("io.quarkus:quarkus-oidc")
   implementation("io.quarkus:quarkus-micrometer")
-  implementation("io.quarkus:quarkus-core-deployment")
   implementation("io.quarkus:quarkus-opentelemetry")
+  implementation("io.quarkus:quarkus-logging-json")
   implementation(libs.quarkus.logging.sentry)
   implementation("io.smallrye:smallrye-open-api-jaxrs")
-  implementation("io.micrometer:micrometer-registry-prometheus")
+  implementation("io.micrometer:micrometer-registry-prometheus-simpleclient")
 
   implementation(platform(libs.cel.bom))
-  implementation("org.projectnessie.cel:cel-tools")
-  implementation("org.projectnessie.cel:cel-jackson")
-
-  if (project.hasProperty("k8s")) {
-    /*
-     * Use the k8s project property to generate manifest files for K8s & Minikube, which will be
-     * located under target/kubernetes.
-     * See also https://quarkus.io/guides/deploying-to-kubernetes for additional details
-     */
-    implementation("io.quarkus:quarkus-kubernetes")
-    implementation("io.quarkus:quarkus-minikube")
-  }
+  implementation("org.projectnessie.cel:cel-standalone")
 
   implementation(libs.guava)
-  implementation("io.opentelemetry:opentelemetry-opentracing-shim")
-  implementation("io.opentelemetry.instrumentation:opentelemetry-micrometer-1.5")
-  implementation(libs.opentracing.util)
 
-  openapiSource(project(":nessie-model", "openapiSource"))
+  compileOnly(libs.microprofile.openapi)
+
+  compileOnly(project(":nessie-immutables-std"))
+  annotationProcessor(project(":nessie-immutables-std", configuration = "processor"))
+
+  openapiSource(project(":nessie-model")) { isTransitive = false }
+
+  testFixturesApi(platform(libs.junit.bom))
+  testFixturesApi(libs.bundles.junit.testing)
 
   testFixturesApi(project(":nessie-client"))
+  testFixturesApi(project(":nessie-model"))
+  testFixturesApi(testFixtures(project(":nessie-client")))
   testFixturesApi(project(":nessie-client-testextension"))
   testFixturesApi(project(":nessie-jaxrs-tests"))
+  testFixturesApi(project(":nessie-quarkus-authn"))
+  testFixturesApi(project(":nessie-quarkus-authz"))
+  testFixturesApi(project(":nessie-quarkus-common"))
+  testFixturesApi(project(":nessie-quarkus-tests")) {
+    // Don't use resteasy-classic (and prevent the Quarkus warning)
+    exclude(group = "org.jboss.resteasy")
+  }
+  testFixturesApi(project(":nessie-quarkus-config"))
   testFixturesApi(project(":nessie-quarkus-tests"))
+  testFixturesApi(project(":nessie-catalog-files-api"))
+  testFixturesApi(project(":nessie-catalog-files-impl"))
+  testFixturesApi(project(":nessie-catalog-service-common"))
+  testFixturesApi(project(":nessie-catalog-service-config"))
   testFixturesApi(project(":nessie-events-api"))
   testFixturesApi(project(":nessie-events-spi"))
   testFixturesApi(project(":nessie-events-service"))
   testFixturesImplementation(project(":nessie-versioned-spi"))
   testFixturesImplementation(project(":nessie-versioned-tests"))
-  testFixturesImplementation(project(":nessie-versioned-persist-adapter"))
-  testFixturesImplementation(project(":nessie-versioned-persist-store"))
-  testFixturesImplementation(project(":nessie-versioned-persist-tests"))
   testFixturesApi(project(":nessie-versioned-storage-common"))
+  testFixturesApi(project(":nessie-versioned-storage-cache"))
   testFixturesApi(project(":nessie-versioned-storage-store"))
-  testFixturesImplementation(project(":nessie-versioned-storage-testextension"))
-  testFixturesApi(enforcedPlatform(libs.quarkus.bom))
+  testFixturesImplementation(project(":nessie-versioned-storage-testextension")) {
+    // Needed to avoid dependency resolution error:
+    // Module 'com.google.guava:guava' ... rejected: 'com.google.guava:listenablefuture:1.0' also
+    // provided by
+    // [com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava(compile)]
+    exclude("com.google.guava")
+  }
+  testFixturesApi(quarkusPlatform(project))
   testFixturesImplementation("com.fasterxml.jackson.core:jackson-annotations")
-  testFixturesApi("io.quarkus:quarkus-rest-client")
   testFixturesApi("io.quarkus:quarkus-test-security")
   testFixturesApi("io.quarkus:quarkus-test-oidc-server")
   testFixturesImplementation(libs.guava)
   testFixturesImplementation(libs.microprofile.openapi)
   testFixturesImplementation(libs.awaitility)
+  testFixturesApi(libs.jakarta.validation.api)
+  testFixturesApi(testFixtures(project(":nessie-quarkus-common")))
 
-  testFixturesApi(platform(libs.junit.bom))
-  testFixturesApi(libs.bundles.junit.testing)
+  testFixturesApi(platform(libs.testcontainers.bom))
+  testFixturesApi("org.testcontainers:testcontainers")
+  testFixturesApi(project(":nessie-keycloak-testcontainer")) {
+    // Don't use resteasy-classic (and prevent the Quarkus warning)
+    exclude(group = "org.jboss.resteasy")
+  }
+  testFixturesApi("org.testcontainers:testcontainers-localstack")
+  testFixturesApi("org.testcontainers:testcontainers-vault")
+  testFixturesApi(project(":nessie-keycloak-testcontainer"))
+  testFixturesApi(project(":nessie-azurite-testcontainer"))
+  testFixturesApi(project(":nessie-gcs-testcontainer"))
+  testFixturesApi(project(":nessie-minio-testcontainer"))
+  testFixturesApi(project(":nessie-trino-testcontainer"))
+  testFixturesApi(project(":nessie-object-storage-mock"))
+  testFixturesApi(project(":nessie-catalog-format-iceberg"))
+  testFixturesApi(project(":nessie-catalog-format-iceberg-fixturegen"))
+  testFixturesApi(project(":nessie-container-spec-helper"))
+  testFixturesApi(project(":nessie-catalog-secrets-api"))
 
+  testFixturesApi(platform(libs.awssdk.bom))
+  testFixturesApi("software.amazon.awssdk:secretsmanager")
+  testFixturesApi(libs.quarkus.vault.deployment)
+
+  testFixturesApi(enforcedPlatform(libs.quarkus.azure.services.bom))
+  testFixturesApi("io.quarkiverse.azureservices:quarkus-azure-keyvault")
+
+  testFixturesApi(platform("org.apache.iceberg:iceberg-bom:$versionIceberg"))
+  testFixturesApi("org.apache.iceberg:iceberg-core")
+  testFixturesApi("org.apache.iceberg:iceberg-bundled-guava")
+  testFixturesApi("org.apache.iceberg:iceberg-aws")
+  testFixturesApi("org.apache.iceberg:iceberg-gcp")
+  testFixturesApi("org.apache.iceberg:iceberg-azure")
+  testFixturesApi("org.apache.iceberg:iceberg-api:$versionIceberg:tests")
+  testFixturesApi("org.apache.iceberg:iceberg-core:$versionIceberg:tests")
+  testFixturesApi(libs.hadoop.common) {
+    exclude("ch.qos.reload4j", "reload4j")
+    exclude("com.sun.jersey")
+    exclude("commons-cli", "commons-cli")
+    exclude("jakarta.activation", "jakarta.activation-api")
+    exclude("javax.servlet", "javax.servlet-api")
+    exclude("javax.servlet.jsp", "jsp-api")
+    exclude("javax.ws.rs", "javax.ws.rs-api")
+    exclude("log4j", "log4j")
+    exclude("org.slf4j", "slf4j-log4j12")
+    exclude("org.slf4j", "slf4j-reload4j")
+    exclude("org.eclipse.jetty")
+    exclude("org.apache.zookeeper")
+  }
+
+  // These two testFixturesRuntimeOnly are here to avoid the 'Failed to index javax...: Class does
+  // not exist in ClassLoader' warnings
+  testFixturesRuntimeOnly(libs.javax.validation.api)
+  testFixturesRuntimeOnly(libs.javax.ws.rs)
+
+  testFixturesCompileOnly(libs.microprofile.openapi)
+
+  testFixturesCompileOnly(project(":nessie-immutables"))
+  testCompileOnly(project(":nessie-immutables"))
+  testAnnotationProcessor(project(":nessie-immutables", configuration = "processor"))
+  intTestCompileOnly(project(":nessie-immutables"))
+  intTestAnnotationProcessor(project(":nessie-immutables", configuration = "processor"))
+
+  intTestImplementation(enforcedPlatform(libs.testcontainers.bom))
   intTestImplementation("io.quarkus:quarkus-test-keycloak-server")
+  intTestImplementation(project(":nessie-keycloak-testcontainer"))
+  intTestImplementation(libs.lowkey.vault.testcontainers)
+
+  intTestImplementation(platform(libs.awssdk.bom))
+  intTestImplementation("software.amazon.awssdk:s3")
+  intTestImplementation("software.amazon.awssdk:sts")
+
+  intTestCompileOnly(libs.immutables.value.annotations)
 }
 
-val pullOpenApiSpec by tasks.registering(Sync::class)
+val pullOpenApiSpec by
+  tasks.registering(Sync::class) {
+    inputs.files(openapiSource)
+    destinationDir = layout.buildDirectory.dir("resources/openapi").get().asFile
+    from(provider { zipTree(openapiSource.singleFile) }) {
+      include("META-INF/openapi/**")
+      eachFile { path = "META-INF/resources/nessie-openapi/${file.name}" }
+    }
+  }
 
-pullOpenApiSpec.configure {
-  destinationDir = openApiSpecDir
-  from(project.objects.property(Configuration::class).value(openapiSource))
+sourceSets.named("main") { resources.srcDir(pullOpenApiSpec) }
+
+tasks.named("processResources") { dependsOn(pullOpenApiSpec) }
+
+tasks.withType(Test::class.java).configureEach {
+  // Needed by org.projectnessie.server.catalog.IcebergResourceLifecycleManager to "clean up"
+  // the shutdown hooks. See there for more information.
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  // Don't use Netty's epoll/iouring/kqueue mechanisms, because some libraryies, especially
+  // the Azure SDK, do never clean up resources (threads), which lead to OOMs in Quarkus tests
+  // (Quarkus uses a separate class loader for every test class).
+  systemProperty("io.netty.transport.noNative", "true")
 }
-
-val openApiSpecDir = buildDir.resolve("openapi-extra")
 
 quarkus {
   quarkusBuildProperties.put("quarkus.package.type", quarkusPackageType())
-  quarkusBuildProperties.put(
-    "quarkus.smallrye-openapi.store-schema-directory",
-    buildDir.resolve("openapi").toString()
-  )
-  quarkusBuildProperties.put(
-    "quarkus.smallrye-openapi.additional-docs-directory",
-    openApiSpecDir.toString()
+  // Pull manifest attributes from the "main" `jar` task to get the
+  // release-information into the jars generated by Quarkus.
+  quarkusBuildProperties.putAll(
+    provider {
+      tasks
+        .named("jar", Jar::class.java)
+        .get()
+        .manifest
+        .attributes
+        .map { e -> "quarkus.package.jar.manifest.attributes.\"${e.key}\"" to e.value.toString() }
+        .toMap()
+    }
   )
 }
 
 val quarkusBuild = tasks.named<QuarkusBuild>("quarkusBuild")
-
-quarkusBuild.configure {
-  outputs.doNotCacheIf("Do not add huge cache artifacts to build cache") { true }
-  dependsOn(pullOpenApiSpec)
-  inputs.property("final.name", quarkus.finalName())
-  inputs.properties(quarkus.quarkusBuildProperties.get())
-}
-
-tasks.withType<Test>().configureEach {
-  systemProperty(
-    "it.nessie.container.postgres.tag",
-    System.getProperty("it.nessie.container.postgres.tag", libs.versions.postgresContainerTag.get())
-  )
-  systemProperty("keycloak.docker.tag", libs.versions.keycloakContainerTag.get())
-}
 
 // Expose runnable jar via quarkusRunner configuration for integration-tests that require the
 // server.
@@ -158,7 +273,7 @@ artifacts {
     provider {
       if (quarkusFatJar()) quarkusBuild.get().runnerJar
       else quarkusBuild.get().fastJar.resolve("quarkus-run.jar")
-    }
+    },
   ) {
     builtBy(quarkusBuild)
   }
@@ -178,14 +293,6 @@ if (quarkusFatJar()) {
       }
     }
   }
-}
-
-listOf("javadoc", "sourcesJar").forEach { name ->
-  tasks.named(name).configure { dependsOn(tasks.named("compileQuarkusGeneratedSourcesJava")) }
-}
-
-listOf("checkstyleTest", "compileTestJava").forEach { name ->
-  tasks.named(name).configure { dependsOn(tasks.named("compileQuarkusTestGeneratedSourcesJava")) }
 }
 
 // Testcontainers is not supported on Windows :(
